--- a/spring-boot-jenkins-path/Jenkinsfile
+++ b/spring-boot-jenkins-path/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+                bat 'dir'
                 bat ' cd spring-boot-jenkins-path  mvn clean install'
             }
         }
