--- a/spring-boot-jenkins-path/Jenkinsfile
+++ b/spring-boot-jenkins-path/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         stage('Build') {
             steps {
                 bat 'dir'
-                bat ' cd spring-boot-jenkins-path  mvn clean install'
+                bat ' cd spring-boot-jenkins-path & mvn clean install'
             }
         }
         stage('Test') {
@@ -17,12 +17,12 @@ pipeline {
         }
         stage('Build Docker Image'){
             steps{
-                bat 'docker build -t jenkins-aws-proj .'
+                bat 'docker build -t jenkins-aws-proj-jenkinspath .'
             }
         }
         stage('Run Docker Image'){
             steps{
-                bat 'docker run -d -p 8082:8083 --name jenkins-aws-proj jenkins-aws-proj'
+                bat 'docker run -d -p 8082:8083 --name jenkins-aws-proj-jenkinspath jenkins-aws-projpatj'
             }
         }
 
